gccida/g3/make_single_succ_edge
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/cfg.c:798:8: error: conflicting types for 'make_single_succ_edge'
char * make_single_succ_edge( __int64 a1, __int64 a2, int a3) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/basic-block.h:305:13: note: previous declaration is here
extern edge make_single_succ_edge       PARAMS ((basic_block,
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/cfg.c:852:14: error: expected expression
*( ( _OWORD *)result + 2) = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/cfg.c:852:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)result + 2) = 0LL; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/cfg.c:853:12: error: expected expression
*( _OWORD *)result = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/cfg.c:853:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/cfg.c:854:14: error: expected expression
*( ( _OWORD *)result + 1) = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/cfg.c:854:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)result + 1) = 0LL; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/cfg.c:855:14: error: expected expression
*( ( _OWORD *)result + 3) = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/cfg.c:855:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)result + 3) = 0LL; 
     ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_single_succ_edge/src/obj/cfg.o] Error 1
